# tabbycat-manager

./: .gitignore  README.md  logging.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: check-version.yml  pyproject-bump-version.yml
app/: __init__.py  app.py  base.py  exceptions.py  sheet_reader.py  utils.py
app/components/: __init__.py  appbar.py  bottom_appbar.py  editable_data_cell.py  google_picker.py  import_adj.py  import_team.py  manage_logo.py  navdrawer.py  round_status.py  tabbycat_authorize.py
app/components/generate_slides/: __init__.py  adjudicators.py  generate_slides.py  speakers.py  teams.py
data/: assets.json
