[project]
name = "tabbycat-manager2"
version = "0.1.1"
description = "Tool for making tabbing easier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.2",
    "flet[all]==0.27.5",
    "google-api-python-client>=2.166.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "tabbycat-api-2",
]

[tool.uv.sources]
tabbycat-api-2 = { git = "https://github.com/inohan/tabbycat-api-2.git" }

[tool.flet]
org = "inohaan"
product = "TabbycatManager"

[tool.flet.app]
